# Polycry_gene

./: Atoms_Initialization.cpp  CMakeLists.txt  Choosing_Atom.cpp  File_Func.cpp  File_Func.h  Ray_File_Func.cpp  Ray_File_Func.h  Ray_Generator.cpp  Read_Tess.cpp  Vector_Generator.cpp  generator.cpp  generator_algo.cpp  generator_algo.h  n100-id1.ori  n100-id1.stpoly  n100-id1.tess  para_test.cpp  test.cpp  test_poly_vertex.cpp  write_data_file.cpp
